2009-05-17  Sam Steingold  <sds@gnu.org>

	* io.d (WHITESPACEP): use VALUES1

2009-05-14  Sam Steingold  <sds@gnu.org>

	* lisparit.d (FLOAT-SCALE-EXPONENT): fix last patch: RA_F_float_F
	returns nullobj when overflow is ignored; check its return value

2009-05-14  Sam Steingold  <sds@gnu.org>

	finish last patch
	* modules/libsvm/Makefile (clean): also remove svm$(SHREXT)
	* modules/libsvm/link.sh (file_list): use $(SHREXT)
	* makemake.in (echo_dist_modules): pass $(SHREXT) to make

2009-05-14  Vladimir Tzankov  <vtzankov@gmail.com>

	* stream.d (init_streamvars) [MULTITHREAD]: clear per thread
	bindings loaded from image (if any)

2009-05-14  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: persist thread (single one) symvalues
	* spvw_memfile.d (savemem) [MULTITHREAD]: save thread special
	variables symvalues
	(loadmem_from_handle) [MULTITHREAD]: load thread symvalues

2009-05-13  Sam Steingold  <sds@gnu.org>

	* format.lisp (format-float-to-string, format-general-float):
	revert the 2009-01-26 patch (no longer necessary given the latest fixes)

2009-05-13  Sam Steingold  <sds@gnu.org>

	support win32 in modules which compile to DLLs
	* modules/libsvm/Makefile (SHREXT): use it instead of literal .so
	* modules/libsvm/libsvm.lisp (default-foreign-library):
	type depends on the platform
	* modules/libsvm/link.sh: pass SHREXT=${SHREXT} to make
	* makemake.in (anymodule): ditto
	* clisp-link.in: set SHREXT=@SHREXT@ before calling link.sh

2009-05-12  Sam Steingold  <sds@gnu.org>

	* lisparit.d (FLOAT-SCALE-EXPONENT): when 10^q=x, return (1/10,q+1)
	to handle 1d23 properly

2009-04-12  Sam Steingold  <sds@gnu.org>

	* floatprint.lisp (decode-float-decimal): widen [a1;a2] to print
	1d23 without ...99999...

2009-05-09  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_garcol.d (SPLIT_REF_LISTS): use alive(). fixes collection of
	thread/mutex/exemption records with SPVW_PURE

2009-05-09  Vladimir Tzankov  <vtzankov@gmail.com>
