@@ -1,5 +1,10 @@
 2009-05-17  Sam Steingold  <sds@gnu.org>
 
+	* modules/i18n/i18n.lisp (copy-locale-conv): export from I18N
+	instead of keeping it in CL-USER
+
+2009-05-17  Sam Steingold  <sds@gnu.org>
+
 	* io.d (WHITESPACEP): use VALUES1
 
 2009-05-14  Sam Steingold  <sds@gnu.org>
